--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div class="banner-text">
 				<h1>郭梅宇</h1>
 				<h2>平面设计师</h2>
-				<a href="#" class="hvr-bounce-to-right">点击下载我的简历</a>
+				<a href="#" class="hvr-bounce-to-right">—下载我的简历—</a>
 			</div>
 		</div>
 	</div>
